--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     document.getElementById('weather').textContent = 'Clima no disponible';
                 }
             } catch (error) {
-                document.getElementById('weather').textContent = 'Cargando';
+                document.getElementById('weather').textContent = '---';
             }
         }
 
