--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -39,20 +39,36 @@
       font-size: 40px;
       font-family: OpenSans, sans-serif;
     }
+    .weather-description {
+	  width: max-content;
+      position: absolute;
+      top: 25%;
+      left: 71%;
+      transform: translate(-50%, -50%);
+      font-size: 25px;
+      font-family: OpenSans, sans-serif;
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+    .weather-icon {
+      width: 40px;
+      height: 40px;
+    }
     .weather {
       position: absolute;
-      top: 45%;
-      left: 67%;
+      top: 49%;
+      left: 72%;
       transform: translate(-50%, -50%);
       font-size: 60px;
       font-family: OpenSans, sans-serif;
     }
   </style>
-</head>
+</head> 
 <body>
   <div class="container">
     <!-- Background Image -->
-    <img id="backgroundImage" src="CLIMATM.png" alt="Diseño de fondo" class="background" />
+    <img id="backgroundImage" src="../../../Clima/897/CLIMATM.png" alt="Diseño de fondo" class="background" />
 
     <!-- Real-time clock -->
     <div id="clock" class="time"></div>
@@ -60,11 +76,41 @@
     <!-- Real-time date -->
     <div id="date" class="date"></div>
 
+    <!-- Weather description with icon -->
+    <div id="weatherDescription" class="weather-description">
+      <img id="weatherIcon" class="weather-icon" src="" alt="" />
+      <span id="weatherText"></span>
+    </div>
+
     <!-- Weather info -->
     <div id="weather" class="weather"></div>
   </div>
 
   <script>
+    const weatherTranslations = {
+      "cielo claro": "Despejado",
+      "algo de nubes": "Parcialmente nublado",
+      "nubes dispersas": "Nublado parcial",
+      "nubes rotas": "Nublado",
+      "muy nuboso": "Nublado",
+      "nublado": "Nublado",
+      "lluvia ligera": "Lluvia ligera",
+      "lluvia moderada": "Lluvia moderada",
+      "chubascos de lluvia": "Chubascos",
+      "tormenta eléctrica": "Tormenta",
+      "lluvia con tormenta": "Tormenta con lluvia",
+      "nieve ligera": "Nieve ligera",
+      "nieve moderada": "Nieve moderada",
+      "aguanieve": "Aguanieve",
+      "niebla": "Niebla",
+      "bruma": "Bruma",
+      "humo": "Humo",
+      "arena": "Arena",
+      "polvo": "Polvo",
+      "huracán": "Huracán",
+      "tornado": "Tornado"
+    };
+
     function updateClock() {
       const now = new Date();
       const hours = String(now.getHours()).padStart(2, '0');
@@ -92,12 +138,26 @@
 
         if (data.weather && data.main) {
           const temperature = Math.round(data.main.temp);
+          const rawDescription = data.weather[0].description.toLowerCase();
+          const iconCode = data.weather[0].icon;
+
+          // Traducción personalizada o fallback
+          const translated = weatherTranslations[rawDescription] || rawDescription.charAt(0).toUpperCase() + rawDescription.slice(1);
+
           document.getElementById('weather').textContent = `${temperature}°C`;
+          document.getElementById('weatherText').textContent = translated;
+          document.getElementById('weatherIcon').src = `https://openweathermap.org/img/wn/${iconCode}@2x.png`;
+          document.getElementById('weatherIcon').alt = translated;
+
         } else {
-          document.getElementById('weather').textContent = 'Clima no disponible';
+          document.getElementById('weather').textContent = '---';
+          document.getElementById('weatherText').textContent = '';
+          document.getElementById('weatherIcon').src = '';
         }
       } catch (error) {
         document.getElementById('weather').textContent = '---';
+        document.getElementById('weatherText').textContent = '';
+        document.getElementById('weatherIcon').src = '';
       }
     }
 
@@ -106,25 +166,27 @@
       const clock = document.getElementById('clock');
       const date = document.getElementById('date');
       const weather = document.getElementById('weather');
+      const weatherDescription = document.getElementById('weatherDescription');
 
       if (currentHour >= 6 && currentHour < 18) {
-        // 6 am a 5:59 pm
         backgroundImage.src = "CLIMATM.png";
-        clock.style.color = "#002060";
-        date.style.color = "#002060";
-        weather.style.color = "#002060";
+        clock.style.color = "#ffffff";
+        date.style.color = "#ffffff";
+        weather.style.color = "#ffffff";
+        weatherDescription.style.color = "#ffffff";
       } else {
-        // 6 pm a 5:59 am
         backgroundImage.src = "CLIMANOCHE.png";
         clock.style.color = "#ffffff";
         date.style.color = "#ffffff";
         weather.style.color = "#ffffff";
+        weatherDescription.style.color = "#ffffff";
       }
     }
 
     setInterval(updateClock, 1000);
     updateClock();
     fetchWeather();
+    setInterval(fetchWeather, 10 * 60 * 1000); // Opcional: actualiza cada 10 min
   </script>
 </body>
 </html>
