--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     }
     .time {
       position: absolute;
-      top: 33%;
-      left: 25%;
+      top: 26%;
+      left: 27%;
       transform: translate(-50%, -50%);
       font-size: 70px;
       font-family: OpenSans, sans-serif;
@@ -42,7 +42,7 @@
     }
     .date {
       position: absolute;
-      top: 70%;
+      top: 69%;
       left: 27%;
       transform: translate(-50%, -50%);
       font-size: 40px;
@@ -79,8 +79,7 @@
       left: 72%;
       transform: translate(-50%, -50%);
       font-size: 23px;
-      font-family: OpenSans bold;
-	  font-style: bold;
+      font-family: OpenSans;
 	  }
   </style>
 </head> 
@@ -146,7 +145,7 @@
       const dayName = days[now.getDay()];
       const day = now.getDate();
       const month = months[now.getMonth()];
-      document.getElementById('date').textContent = `${dayName}, ${day} de ${month}`;
+  document.getElementById('date').innerHTML = `<div style="text-align:center;">${dayName}<br>${day} de ${month}</div>`;
 
       updateBackground(now.getHours());
     }
