Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
         weather.style.color = "#ffffff";
         weatherDescription.style.color = "#ffffff";
       } else {
-        clock.style.color = "#ffffff";
-        date.style.color = "#ffffff";
+        clock.style.color = "#990000";
+        date.style.color = "#990000";
         weather.style.color = "#ffffff";
         weatherDescription.style.color = "#ffffff";
       }
@@ -212,4 +212,5 @@
   </script>
 </body>
 </html>
+
 
