--- a/index.html
+++ b/index.html
@@ -211,13 +211,13 @@
     const weatherDescription = document.getElementById('weatherDescription');
 
     if (currentHour >= 6 && currentHour < 18) {
-      clock.style.color = "#990000";
-      date.style.color = "#990000";
+      clock.style.color = "#002060";
+      date.style.color = "#002060";
       weather.style.color = "#ffffff";
       weatherDescription.style.color = "#ffffff";
     } else {
-      clock.style.color = "#990000";
-      date.style.color = "#990000";
+      clock.style.color = "#fff";
+      date.style.color = "#fff";
       weather.style.color = "#ffffff";
       weatherDescription.style.color = "#ffffff";
     }
@@ -229,6 +229,7 @@
   </script>
 </body>
 </html>
+
 
 
 
