--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       position: absolute;
       top: 26%;
       left: 25%;
+	  color:#fedee3;
       transform: translate(-50%, -50%);
       font-size: 70px;
       font-family: OpenSans, sans-serif;
@@ -47,6 +48,7 @@
       left: 25%;
       transform: translate(-50%, -50%);
       font-size: 40px;
+	color:#9b0047
       font-family: OpenSans, sans-serif;
     }
     .weather-description {
@@ -58,6 +60,7 @@
       font-size: 21px;
       font-family: OpenSans, sans-serif;
       display: flex;
+	 color:#9b0047;
       align-items: center;
       gap: 10px;
     }
@@ -71,6 +74,7 @@
       left: 72%;
       transform: translate(-50%, -50%);
       font-size: 60px;
+      color:#fe006c;
       font-family: OpenSans, sans-serif;
     }
 	  .bog {
@@ -80,6 +84,7 @@
       left: 72%;
       transform: translate(-50%, -50%);
       font-size: 23px;
+	  color:#9b0047;
       font-family: OpenSans, sans-serif;
 	  }
   </style>
@@ -229,6 +234,7 @@
   </script>
 </body>
 </html>
+
 
 
 
